# redman

./: LICENSE  Pipfile  README.md  redman.plugin.zsh  redman.zsh  setup.cfg
redman/: AUTHORS  SPONSORS  __init__.py  __main__.py  cli.py  color.py  command.py  config.py  history.py  main.py  redman_history.py  redmanrc.py  redmine_api.py  sh_fzf.py
redman/helpers/: redmine_api.py  table.py
