[metadata]
name = redman
version = 0.0.3
description = REDMAN is a command line tool that manages redmine.
long_description = file: README.md
license_file = LICENSE

[options]
packages = redman
install_requires =
    texttable>=1.6
    fire>=0.4

[entry_points]
console_scripts =
    redman = redman.cli:main

[flake8]
ignore = E501

[mypy]
check_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = False
strict_equality = True

[pycodestyle]
ignore = E501
