[metadata]
name = redman
version = 0.0.4
description = REDMAN is a command line tool that manages redmine.
long_description_content_type = text/markdown
long_description = file: README.md
license_file = LICENSE
author = oktntko
author_email = oktntko@gmail.com
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = redman
install_requires =
    texttable>=1.6
    pyyaml>=5.4
    click>=8.0

[entry_points]
console_scripts =
    redman = redman.main:cli

[flake8]
ignore = E501

[mypy]
check_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = False
strict_equality = True

[pycodestyle]
ignore = E501
